--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
 		}
 	],
 	"keywords": ["utilities"],
+  "require": {
+    "rbdwllr/psr-jwt": "^2.0",
+    "gumlet/php-image-resize": "^2.0"
+  },
 	"autoload": {
 		"psr-4": {
 			"Darkwave\\": ["src/"]
